DC-1995 [Feedback] print issue (plain text content don't wrap)

--- a/app/internal_packages/pdf/static/print-styles.css
+++ b/app/internal_packages/pdf/static/print-styles.css
@@ -15,6 +15,10 @@ h1,
   color: black !important;
 }
 
+pre {
+  white-space: pre-wrap;
+}
+
 #pdf-button {
   float: right;
   margin-left: 10px;
